rework for overflow bug

--- a/app/src/res/sass/modules/item_card.sass
+++ b/app/src/res/sass/modules/item_card.sass
@@ -22,7 +22,7 @@
       span.body
         padding-bottom: 0.5rem
         white-space: pre-wrap
-        overflow-x: hidden
+        word-break: break-word;
   .timesince
     position: absolute
     top: 17px
